@@ -11,6 +11,7 @@ XX/XX/XX
 * Fixed crash in seqstarnet (#1814)
 * Fixed seqpsf bug preventing astrometric registration in some circumstances (#1815)
 * Fixed issue with RGB composition not always applying registration (!948)
+* Fixed processing thread / child process accounting in the "Stop" dialog (#1705)
 
 **Improvements**
 * Support arbitrary script categories in the GtkTreeView in script preferences
